# pillar-finetune-adapt

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: csv_dataset.yaml  nlst_detr_atlas.yaml  vimed_chest_ct_only.yaml  vimed_chest_dual_stream_report.yaml  vimed_chest_dual_stream_report_cosine.yaml  vimed_chest_pet_from_ct.yaml  vimed_chest_pet_from_hf.yaml  vimed_chest_pet_only.yaml  vimed_chest_petct_atlas_v2.yaml
examples/: nlst.csv
examples/rve_example/: metadata.json
pillar/: __init__.py
pillar/augmentations/: __init__.py  abstract.py  basic.py  image.py
pillar/datasets/: __init__.py  abstract_loader.py  csv_dataset.py  image_loaders.py  nlst.py  nlst_utils.py  vimed_chest_report.py  vimed_chest_single_modality.py
pillar/engines/: __init__.py  classifier.py  report_generator.py
pillar/losses/: abstract.py  object_prediction.py  survival.py
pillar/metrics/: abstract.py  multilabel.py  survival.py
pillar/models/: __init__.py  abstract_model.py
pillar/models/backbones/: __init__.py  abstract.py  dual_stream_atlas.py  mmatlas.py
pillar/models/heads/: __init__.py  basic.py  cumulative_hazard_layer.py  detr.py  perceiver_resampler.py  report_lm.py  vision_projection.py
pillar/models/pooling/: __init__.py  abstract.py  basic_pool_layers.py  multi_attention_pool_layers.py  volume_attention_pool.py
pillar/models/report_generators/: __init__.py  dual_stream_report.py
pillar/utils/: __init__.py  cosine_with_warmup.py  detr.py  engine.py  loading.py  logging.py  lr_decay.py  matcher.py  memdebug.py  metrics.py  misc.py  parsing.py  petct_windowing.py  pos_embed.py  sampler.py
scripts/: ensemble.py  export_dual_stream_encoder.py  extract_encoder.py  generate_report_demo.py  run_nlst.sh  sanity_check.py  sanity_check_dual_stream.py  sanity_check_dual_stream_report.py  sbatch_chest_ct.sh  sbatch_chest_pet_from_ct.sh  sbatch_chest_pet_from_hf.sh  sbatch_dual_stream_report.sh  sbatch_h200.sh  smoke_test_vimed_chest_encoders.py  test_setup.sh  test_setup_pip.sh  train.py  validate.sh
