[project]
name = "pillar-finetune"
version = "0.1.0"
description = "Fine-tuning framework for Pillar medical imaging models"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
authors = [
    {name = "YalaLab"},
]
keywords = ["medical imaging", "deep learning", "pytorch", "lung cancer", "CT imaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    # Core Scientific Computing
    "numpy==1.23.5",
    "scipy==1.10.1",
    "pandas==2.0.0",
    "matplotlib==3.7.1",
    "seaborn==0.12.2",
    "scikit-learn==1.2.2",
    "scikit-image==0.20.0",
    # Deep Learning Core
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "torchmetrics==0.7.0",
    # Transformers and Vision
    "transformers==4.55.2",
    "tokenizers>=0.13.3",
    "timm==1.0.9",
    "einops==0.6.0",
    # Phase B: LLM report decoder (PEFT/LoRA + NLG metrics)
    "peft>=0.11.0",
    "sacrebleu>=2.4.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
    # Medical Imaging
    "simpleitk==2.2.1",
    "nibabel==5.1.0",
    "pydicom==2.3.1",
    "torchio==0.18.90",
    "medmnist==2.2.1",
    # Computer Vision
    "opencv-python-headless==4.7.0.72",
    "albumentations==1.3.0",
    "kornia==0.7.3",
    "kornia-rs==0.1.5",
    "imageio==2.27.0",
    "pillow==9.4.0",
    # ML Experiment Tracking
    "wandb==0.15.4",
    "tensorboard",
    # Data Processing
    "h5py",
    "tqdm==4.65.0",
    "pyyaml==6.0",
    "jsonschema==4.17.3",
    "omegaconf>=2.3.0",
    # Utilities
    "python-dateutil==2.8.2",
    "requests==2.28.1",
    "filelock==3.16.1",
    "psutil==5.9.5",
    "humanize==4.6.0",
    "rich==12.6.0",
    # HuggingFace & Model Hub
    "huggingface-hub>=0.14.1",
    "huggingface_hub[cli]",
    "safetensors>=0.3.0",
    "fsspec>=2023.3.0",
    # Additional Dependencies
    "easydict==1.10",
    "deprecated==1.2.13",
    "wrapt==1.15.0",
    "typing-extensions==4.12.2",
    "editables>=0.5",
    "lifelines>=0.28.0",
    "datadings>=3.4.7",
    "rad-vision-engine",
    "hatchling>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit==3.8.0",
    "autopep8==1.6.0",
    "jupyter==1.0.0",
    "jupyterlab==3.6.3",
    "ipython==8.12.0",
    "ipykernel==6.22.0",
    "ipdb==0.13.13",
    "notebook==6.5.4",
    "nbstripout==0.7.1",
    "ipympl==0.9.4",
    "bokeh==3.5.2",
]

[project.urls]
Homepage = "https://github.com/YalaLab/pillar-finetune"
Documentation = "https://github.com/YalaLab/pillar-finetune/blob/main/README.md"
Repository = "https://github.com/YalaLab/pillar-finetune"
Issues = "https://github.com/YalaLab/pillar-finetune/issues"

[project.scripts]
pillar-train = "scripts.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pillar"]

[tool.uv]
# Use PyTorch index for CUDA 12.8 packages
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
rad-vision-engine = { git = "https://github.com/YalaLab/rave.git" }

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | logs
)/
'''

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "logs",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["pillar"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["pillar"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
